Fixed spacing between columns, Updated pricing as per fake mock, fixed wording, added call to action button

--- a/app/assets/stylesheets/price-table.scss
+++ b/app/assets/stylesheets/price-table.scss
@@ -49,7 +49,8 @@
 
   .third {
     width: 27.95%;
-    margin: 0 30px 0 0;
+    margin: 0;
+    border-right: 1px solid #fff;
     display: inline-block;
   }
 
